--- a/react-learning/app/globals.css
+++ b/react-learning/app/globals.css
@@ -2,3 +2,28 @@
 @tailwind components;
 @tailwind utilities;
  */
+ header {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+}
+
+nav {
+  display: flex;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+li {
+  margin-right: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
